--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyFIS-WebSite",
+  "name": "myfis-website",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:ismetkizgin/MyFIS-WebSite.git",
