--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "npm run build && next start"
+    "start": "npm run build && next start -p $PORT"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
