--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zeit/next-sass": "^1.0.1",
     "admin-lte": "v3",
     "bootstrap": "^4.5.0",
+    "js-cookie": "^2.2.1",
     "next": "^9.4.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
